Fixed global overflow bug preventing scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,6 @@
     width: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
   }
